
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "base2k",
    deps = [
        "public",
    ],
)

ppu_cc_library(
    name = "ring_io",
    srcs = ["ring_io.cc"],
    hdrs = ["ring_io.h"],
    deps = [
        "//ppu/mpc:io_interface",
    ],
)

ppu_cc_library(
    name = "public",
    srcs = ["public.cc"],
    hdrs = ["public.h"],
    deps = [
        "//ppu/core",
        "//ppu/mpc:kernel",
        "//ppu/mpc:prg_state",
        "//ppu/mpc/util:ring_ops",
    ],
)
