
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library", "ppu_cc_test")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "beaver",
    hdrs = ["beaver.h"],
    deps = [
        "//ppu/core:array_ref",
        "//ppu/core:array_ref_util",
        "//ppu/core:type_util",
    ],
)

ppu_cc_library(
    name = "beaver_test",
    testonly = 1,
    srcs = ["beaver_test.cc"],
    hdrs = ["beaver_test.h"],
    deps = [
        ":beaver",
        "//ppu/mpc/util:ring_ops",
        "//ppu/mpc/util:test_util",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)

ppu_cc_library(
    name = "beaver_ref",
    srcs = ["beaver_ref.cc"],
    hdrs = ["beaver_ref.h"],
    deps = [
        ":beaver",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_test(
    name = "beaver_ref_test",
    srcs = ["beaver_ref_test.cc"],
    deps = [
        ":beaver_ref",
        ":beaver_test",
    ],
)

ppu_cc_library(
    name = "prg_tensor",
    hdrs = ["prg_tensor.h"],
    deps = [
        "//ppu/core:array_ref",
        "//ppu/crypto:pseudo_random_generator",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_library(
    name = "trusted_party",
    srcs = ["trusted_party.cc"],
    hdrs = ["trusted_party.h"],
    deps = [
        ":prg_tensor",
        "//ppu/core:type_util",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_library(
    name = "beaver_tfp",
    srcs = ["beaver_tfp.cc"],
    hdrs = ["beaver_tfp.h"],
    deps = [
        ":beaver",
        ":trusted_party",
        "//ppu/link",
        "//ppu/mpc/util:ring_ops",
        "//ppu/utils:serialize",
    ],
)

ppu_cc_test(
    name = "beaver_tfp_test",
    srcs = ["beaver_tfp_test.cc"],
    deps = [
        ":beaver_test",
        ":beaver_tfp",
    ],
)

ppu_cc_library(
    name = "beaver_cheetah",
    srcs = ["beaver_cheetah.cc"],
    hdrs = ["beaver_cheetah.h"],
    deps = [
        ":beaver",
        ":trusted_party",
        "//ppu/crypto/ot/silent:primitives",
        "//ppu/link",
        "//ppu/mpc/util:ring_ops",
        "//ppu/utils:serialize",
    ],
)

ppu_cc_test(
    name = "beaver_cheetah_test",
    srcs = ["beaver_cheetah_test.cc"],
    deps = [
        ":beaver_cheetah",
        ":beaver_test",
    ],
)
