
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_binary", "ppu_cc_library", "ppu_cc_test")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "semi2k",
    deps = [
        ":io",
        ":protocol",
    ],
)

ppu_cc_library(
    name = "object",
    hdrs = ["object.h"],
    deps = [
        "//ppu/mpc:prg_state",
        "//ppu/mpc/base2k:ring_io",
        "//ppu/mpc/beaver:beaver_tfp",
    ],
)

ppu_cc_library(
    name = "boolean",
    srcs = ["boolean.cc"],
    hdrs = ["boolean.h"],
    deps = [
        ":object",
        ":type",
        "//ppu/mpc:interfaces",
        "//ppu/mpc:kernel",
        "//ppu/mpc/util:communicator",
    ],
)

ppu_cc_library(
    name = "conversion",
    srcs = ["conversion.cc"],
    hdrs = ["conversion.h"],
    deps = [
        ":object",
        ":type",
        "//ppu/core:vectorize",
        "//ppu/mpc:interfaces",
        "//ppu/mpc:kernel",
        "//ppu/mpc/util:circuits",
        "//ppu/mpc/util:communicator",
    ],
)

ppu_cc_library(
    name = "arithmetic",
    srcs = ["arithmetic.cc"],
    hdrs = ["arithmetic.h"],
    deps = [
        ":object",
        ":type",
        "//ppu/core:vectorize",
        "//ppu/mpc:interfaces",
        "//ppu/mpc:kernel",
        "//ppu/mpc/util:circuits",
        "//ppu/mpc/util:communicator",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_library(
    name = "protocol",
    srcs = ["protocol.cc"],
    hdrs = ["protocol.h"],
    deps = [
        ":arithmetic",
        ":boolean",
        ":conversion",
        ":object",
        "//ppu/mpc:abkernels",
        "//ppu/mpc:prg_state",
        "//ppu/mpc/base2k:public",
    ],
)

ppu_cc_test(
    name = "protocol_test",
    srcs = ["protocol_test.cc"],
    deps = [
        ":protocol",
        "//ppu/mpc:arithmetic_test",
        "//ppu/mpc:boolean_test",
        "//ppu/mpc:compute_test",
    ],
)

ppu_cc_library(
    name = "io",
    srcs = ["io.cc"],
    hdrs = ["io.h"],
    deps = [
        ":type",
        "//ppu/mpc/base2k:ring_io",
    ],
)

ppu_cc_test(
    name = "io_test",
    srcs = ["io_test.cc"],
    deps = [
        ":io",
        "//ppu/mpc:io_test",
    ],
)

ppu_cc_library(
    name = "type",
    srcs = ["type.cc"],
    hdrs = ["type.h"],
    deps = [
        "//ppu/core:type",
    ],
)

ppu_cc_test(
    name = "type_test",
    srcs = ["type_test.cc"],
    deps = [
        ":type",
    ],
)

ppu_cc_binary(
    name = "protocol_bench",
    srcs = ["protocol_bench.cc"],
    deps = [
        ":protocol",
        "//ppu/mpc:compute_bench",
    ],
)
