
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library", "ppu_cc_test")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "circuits",
    hdrs = ["circuits.h"],
    deps = [
        "//ppu/core:vectorize",
        "//ppu/utils:exception",
        "@com_github_xtensor_xtensor//:xtensor",
        "@com_google_absl//absl/numeric:bits",
    ],
)

ppu_cc_test(
    name = "circuits_test",
    srcs = ["circuits_test.cc"],
    linkopts = ["-lm"],
    deps = [
        ":circuits",
        "//ppu/utils:int128",
    ],
)

ppu_cc_library(
    name = "communicator",
    srcs = ["communicator.cc"],
    hdrs = ["communicator.h"],
    deps = [
        ":ring_ops",
        "//ppu/link",
        "//ppu/mpc:object",
        "@com_github_xtensor_xtensor//:xtensor",
        "@com_google_absl//absl/types:span",
    ],
)

ppu_cc_test(
    name = "communicator_test",
    srcs = ["communicator_test.cc"],
    deps = [
        ":communicator",
        ":test_util",
    ],
)

ppu_cc_library(
    name = "simulate",
    hdrs = ["simulate.h"],
    deps = [
        "//ppu/link",
    ],
)

ppu_cc_library(
    name = "test_util",
    testonly = 1,
    srcs = ["test_util.cc"],
    hdrs = ["test_util.h"],
    deps = [
        ":communicator",
        ":simulate",
        "//ppu/core",
        "//ppu/link",
        "//ppu/mpc:object",
        "@com_github_xtensor_xtensor//:xtensor",
    ],
)

ppu_cc_library(
    name = "bench_util",
    srcs = ["bench_util.cc"],
    hdrs = ["bench_util.h"],
    deps = [
        ":communicator",
        ":simulate",
        "//ppu/core",
        "//ppu/link",
        "//ppu/mpc:object",
        "@com_github_xtensor_xtensor//:xtensor",
    ],
)

ppu_cc_library(
    name = "cexpr",
    srcs = ["cexpr.cc"],
    hdrs = ["cexpr.h"],
    deps = [
        "//ppu/core",
    ],
)

ppu_cc_test(
    name = "cexpr_test",
    srcs = ["cexpr_test.cc"],
    deps = [
        ":cexpr",
    ],
)

ppu_cc_library(
    name = "ring_ops",
    srcs = ["ring_ops.cc"],
    hdrs = ["ring_ops.h"],
    deps = [
        ":linalg",
        "//ppu/core",
        "//ppu/crypto:pseudo_random_generator",
        "@com_github_xtensor_xtensor//:xtensor",
    ],
)

ppu_cc_test(
    name = "ring_ops_test",
    srcs = ["ring_ops_test.cc"],
    deps = [
        ":ring_ops",
    ],
)

ppu_cc_library(
    name = "linalg",
    hdrs = ["linalg.h"],
)

ppu_cc_test(
    name = "linalg_test",
    srcs = ["linalg_test.cc"],
    deps = [
        ":linalg",
    ],
)
