
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "ecc_cryptor",
    srcs = ["ecc_cryptor.cc"],
    hdrs = ["ecc_cryptor.h"],
    deps = [
        "//ppu/crypto:hash_util",
        "@com_google_absl//absl/types:span",
    ],
)

ppu_cc_library(
    name = "donna_ecc_cryptor",
    srcs = ["donna_ecc_cryptor.cc"],
    hdrs = ["donna_ecc_cryptor.h"],
    deps = [
        ":ecc_cryptor",
        "//ppu/utils:exception",
        "//ppu/utils:parallel",
        "@com_github_floodyberry_curve25519_donna//:curve25519_donna",
        "@com_github_openssl_openssl//:openssl",
    ],
)

ppu_cc_library(
    name = "ipp_ecc_cryptor",
    srcs = ["ipp_ecc_cryptor.cc"],
    hdrs = ["ipp_ecc_cryptor.h"],
    deps = [
        ":ecc_cryptor",
        "//ppu/utils:exception",
        "//ppu/utils:parallel",
        "@com_github_intel_ipp//:ipp",
        "@com_github_openssl_openssl//:openssl",
    ],
)

ppu_cc_library(
    name = "fourq_cryptor",
    srcs = ["fourq_cryptor.cc"],
    hdrs = ["fourq_cryptor.h"],
    deps = [
        ":ecc_cryptor",
        "//ppu/utils:exception",
        "//ppu/utils:parallel",
        "@com_github_microsoft_fourqlib//:fourqlib",
        "@com_github_openssl_openssl//:openssl",
    ],
)

ppu_cc_library(
    name = "cryptor_selector",
    srcs = ["cryptor_selector.cc"],
    hdrs = ["cryptor_selector.h"],
    deps = [
        ":donna_ecc_cryptor",
        ":fourq_cryptor",
        ":ipp_ecc_cryptor",
        "@com_github_google_cpu_features//:cpu_features",
    ],
)
