
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_binary", "ppu_cc_library")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "store",
    deps = [
        ":cipher_store",
        ":cipher_store_impl",
    ],
)

ppu_cc_library(
    name = "cipher_store_impl",
    srcs = ["cipher_store_impl.cc"],
    hdrs = ["cipher_store_impl.h"],
    deps = [
        ":cipher_store",
        ":scope_disk_cache",
        "//ppu/psi/io",
        "@com_google_absl//absl/strings",
    ],
)

ppu_cc_library(
    name = "cipher_store",
    hdrs = ["cipher_store.h"],
)

ppu_cc_library(
    name = "scope_disk_cache",
    srcs = ["scope_disk_cache.cc"],
    hdrs = ["scope_disk_cache.h"],
    deps = [
        "//ppu/psi/io",
        "//ppu/utils:exception",
        "@llvm-project//llvm:Support",
    ],
)
