
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("//bazel:ppu.bzl", "ppu_cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

td_library(
    name = "scfhlo_dialect_td_files",
    srcs = [
        "scfhlo_ops.td",
    ],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
    ],
)

gentbl_cc_library(
    name = "scfhlo_dialect_inc_gen",
    tbl_outs = [
        (
            ["-gen-op-decls"],
            "scfhlo_ops.h.inc",
        ),
        (
            ["-gen-op-defs"],
            "scfhlo_ops.cc.inc",
        ),
        (
            ["-gen-dialect-decls"],
            "scfhlo_dialect.h.inc",
        ),
        (
            ["-gen-dialect-defs"],
            "scfhlo_dialect.cc.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "scfhlo_ops.td",
    deps = [":scfhlo_dialect_td_files"],
)

ppu_cc_library(
    name = "scfhlo_dialect",
    srcs = ["scfhlo_ops.cc"],
    hdrs = ["scfhlo_ops.h"],
    deps = [
        ":scfhlo_dialect_inc_gen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TensorDialect",
        "@org_tensorflow//tensorflow/compiler/mlir/hlo",
    ],
)
